# brainf--k

./: .gitignore  Brainf--k  Brainf--k.hs  Main  Main.hs  README.md  brainf-k.cabal  brainfuck.cabal  default.nix  test.bf
