name:                brainfuck
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Nick Spinale
maintainer:          spinalen@carleton.edu
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable brainf-k
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       bytestring >=0.10 && <0.11,
                       attoparsec
  default-language:    Haskell2010
